2006-01-30  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/lang/System/security.java: More new tests.

2006-01-30  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/lang/System/security.java: New test.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ViewportLayout/minimumLayoutSize.java:
	New test

2006-01-30  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/regex/Pattern/testdata1,
	gnu/testlet/java/util/regex/Pattern/testdata2:
	Moved some cases from testdata2 to testdata1.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicListUI/updateLayoutStateNeeded.java:
	New test

2006-01-31  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/util/TestOfPrime2.java (test): Call new
	methods.
	(checkIsPrime65537): Clarified that the number is Fermat's F4 prime.
	(checkCryptoPrimes): New method.
	(checkIsPrime): Re-wrote to reduce amount of output.
	(checkIsNonPrime): New method.
	(checkSpeed): New method.
	(eulerTime): New method.
	(millerRabinTime): New method.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JLayeredPane/addImp.java
	(testAddDifferentLayers): New test.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JLayeredPane/addImp.java
	New test.

2005-01-29  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Double/DoubleSetterTest.java: Cleaned up
	test name containing "Error".

2005-01-29  Edwin Steiner  <edwin.steiner@gmx.net>

	* gnu/testlet/java/lang/Byte/ByteTest.java,
	gnu/testlet/java/lang/Character/CharacterTest.java,
	gnu/testlet/java/lang/Double/DoubleTest.java,
	gnu/testlet/java/lang/Float/FloatTest.java,
	gnu/testlet/java/lang/Integer/IntegerTest.java,
	gnu/testlet/java/lang/Long/LongTest.java,
	gnu/testlet/java/lang/Math/MathTest.java,
	gnu/testlet/java/lang/Short/ShortTest.java,
	gnu/testlet/java/lang/String/StringTest.java,
	gnu/testlet/java/lang/StringBuffer/StringBufferTest.java: