@@ -1,3 +1,8 @@
+2006-01-30  Roman Kennke  <kennke@aicas.com>
+
+	* gnu/testlet/javax/swing/JRootPane/RootLayout/preferredLayoutSize.java:
+	New test
+
 2006-01-30  Gary Benson <gbenson@redhat.com>
 
 	* gnu/testlet/java/lang/System/security.java: More new tests.
